--- a/templates/towers.html
+++ b/templates/towers.html
@@ -126,15 +126,14 @@ nav {
 }
 
 .card {
+    flex-grow: 1;
     background: #111;
     border: 1px solid #333;
     border-radius: 12px;
     padding: 2rem;
-    max-width: 520px;
-    width: 100%;
     text-align: center;
+    min-height: 600px; 
 }
-
 
 
 label {
