--- a/templates/sidepanel.html
+++ b/templates/sidepanel.html
@@ -1,10 +1,13 @@
 
 <style>
     .side-panel {
-    width: 300px;
-    flex-shrink: 0;
-    position: sticky; 
-    top: 20px;
+        width: 300px;
+        flex-shrink: 0;
+        position: sticky;
+        top: 20px;
+        height: fit-content;
+    }
+
 
     .panel-card {
         background: linear-gradient(180deg, #1e2140, #15162b);
