--- a/templates/sidepanel.html
+++ b/templates/sidepanel.html
@@ -69,6 +69,25 @@
         background: #4a4ee8;
     }
 
+   
+    .input2 {
+            width: 100%;
+            padding: 12px;
+            background: #2a3448;
+            border: 2px solid #7c3aed;
+            border-radius: 8px;
+            color: #fff;
+            margin-bottom: 14px;
+            position: relative;
+            top: 4px;
+            -moz-appearance: textfield;
+    }
+
+    .input2::-webkit-inner-spin-button,
+    .input2::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
 
 
 </style>
@@ -81,7 +100,7 @@
             </div>
             <div class="bet-input">
                 <span>$</span>
-                <input type="number" id="betAmount" value="10" min="1">
+                <input type="number" id="betAmount" value="10" min="1" class="input2">
             </div>
             <div class="bet-actions">
                 <button onclick="adjustBet(0.5)">½</button>
@@ -89,7 +108,6 @@
                 <button onclick="setMaxBet()">MAX</button>
             </div>
         </div>
-
         <div class="field" style="margin-top: 20px;">
             <label style="font-size:0.8rem; color:#9ca3af;">Mines per Row</label>
             <div class="bet-input">
