--- a/templates/towers.html
+++ b/templates/towers.html
@@ -30,18 +30,6 @@ nav {
     align-items: center;
 }
 
-.input2 {
-    width: 100%;
-    padding: 12px;
-    background: #2a3448;
-    border: 2px solid #7c3aed;
-    border-radius: 8px;
-    color: #fff;
-    margin-bottom: 14px;
-    position: relative;
-    top: 4px;
-}
-
 
 @media (max-width: 768px) {
     h1 {
@@ -176,6 +164,7 @@ input {
     height: fit-content;   
 }
 
+
 .card {
     flex-grow: 1;
     background: #111;
@@ -189,14 +178,22 @@ input {
     .game-container {
         flex-direction: column;
         align-items: center;
+        padding: 10px 10px; 
     }
 
     .side-panel {
         width: 100%;
         max-width: 520px;
-        position: static;
+        position: sticky; 
+        top: 0;           
+        padding: 10px 0;
+        z-index: 101;     
     }
-    
+
+    .card {
+        width: 100%;
+        margin-top: 10px; 
+    }
 }
 
 button {
@@ -310,6 +307,7 @@ input[type=number] {
                 $<span id="currentAmount">0</span>
             </div>
         </div>
+        <button id="playTowersBtn" class="primary-btn">Play Towers</button>
     </div>
 
     
@@ -323,8 +321,7 @@ input[type=number] {
                 </div>
             {% endfor %}
         </div>
-        <button id="playTowersBtn" class="primary-btn">Play Towers</button>
-    </div>
+\    </div>
 </div>
 
     <script>
