--- a/templates/towers.html
+++ b/templates/towers.html
@@ -321,7 +321,7 @@ input[type=number] {
                 </div>
             {% endfor %}
         </div>
-\    </div>
+    </div>
 </div>
 
     <script>
