--- a/templates/mines.html
+++ b/templates/mines.html
@@ -126,6 +126,7 @@
             padding: 3rem 1rem;
         }
 
+
         .card {
             background: #111;
             border: 1px solid #333;
@@ -509,6 +510,18 @@
             -moz-appearance: textfield;
         }
 
+        .game-container {
+            display: flex;
+            flex-direction: row; 
+            align-items: flex-start; 
+            gap: 24px;
+            width: 100%;
+            max-width: 1100px;
+            margin: 0 auto;
+            padding: 40px 20px;
+        }
+
+
     </style>
 </head>
 
@@ -582,17 +595,17 @@ function setMaxBet() {
 </div>
 
 <main>
-    <div class="side-panel">
-        {% include "sidepanel.html" %}
+    <div class="game-container">
+        <div class="side-panel">
+            {% include "sidepanel.html" %}
 
-
-
-        <div class="panel-card" id="cashoutInfo" style="margin-top: 15px; text-align: center;">
-            <div>Multiplier: <span id="multiplier">1x</span></div>
-            <div>Current Amount: $<span id="currentAmount">0</span></div>
-            <div>Amount After Next Tile: $<span id="amountAfter">0</span></div>
+            <div class="panel-card" id="cashoutInfo" style="margin-top: 15px; text-align: center;">
+                <div>Multiplier: <span id="multiplier">1x</span></div>
+                <div>Current Amount: $<span id="currentAmount">0</span></div>
+                <div>Amount After Next Tile: $<span id="amountAfter">0</span></div>
+            </div>
+            <button id="playMinesBtn">Play Mines</button>
         </div>
-        <button id="playMinesBtn">Play Mines</button>
     </div>
 
 
